@@ -1,1 +1,4 @@
+*When arrowing up and down in mozilla gecko combo boxes, NVDA reloads the document, even if there is no javascript instructing gecko to do so.
+ 
+
 
