@@ -1,4 +1,3 @@
-*Need to generate a typelib for ISimpleDomNode in mozilla so NVDA can work out an IAccessible's mozilla MSAA child ID. Once this is done then work on the mozilla virtualBuffer can continue.
 *Need to Add events in internet explorer that can update parts of the page due to things such as javascript.
 *Need to create mor NVDA config dialogs that can configure such things as document formatting and presentation.
 *Need to make windows security dialogs (including windows log on) readable
