@@ -1,4 +1,5 @@
 Changes since revision 164:
+*Mouse shape changes are now reported.
 *Fixed some bugs in the sapi5 driver, making it more responsive, and less likely to not stop speaking when asked to.
 *Objects that do not have a specific type (client objects) are now reported as "window".
 *The PC speaker is now used to communicate the percentage of a progress bar as it goes up (example: copying a large amount of data in windows explorer, or loading a large web page in internet explorer).
